[package]
name = "cheat_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
crossterm = "0.29.0"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
termimad = "0.34.1"
tokio = { version = "1.49.0", features = ["full"] }
